[package]
name = "heartfelt"
version = "0.1.0"
authors = ["hassan <hassanabujabir@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/DrSloth/heartfelt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-lexer = "0.1.0"
regex = "*"
ahash = "*"
lazy_static = "*"
