[package]
name = "heartfelt"
version = "0.1.0"
authors = ["hassan <hassanabujabir@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/DrSloth/heartfelt"
license = "MIT"
description = """
# Heartfelt

A simple Rust library for creating DSLs (Domain Specific Languages)

## Roadmap
This is still pretty much a work in progress. There will soon be an update with 
examples and documentation.

Heartfelt is still at a very early stage but a lot of features are planned.
For Instance: 
A compiler to bytecode.
A vm for that bytecode.
More language features.

Most of the features will be behind a cargo feature in order to keep binary sizes as small as
possible and to only feature what you really need.

# License 

Heartfelt is distributed under the terms of the MIT license.

See LICENSE for more details
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-lexer = "0.1.0"
regex = "*"
ahash = "*"
lazy_static = "*"
